--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ xcuserdata
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
 # Pods/
+
+# Swift package manager
+.build/
